--- a/nest-gql-demo/package.json
+++ b/nest-gql-demo/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^7.9.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/sequelize": "^0.1.1",
     "apollo-server-express": "^2.19.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/sequelize": "^4.28.9",
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
