--- a/nest-gql-demo/package.json
+++ b/nest-gql-demo/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/sequelize": "^0.1.1",
     "apollo-server-express": "^2.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
     "pg": "^8.5.1",
@@ -54,6 +56,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
