--- a/nest-gql-demo/package.json
+++ b/nest-gql-demo/package.json
@@ -29,6 +29,7 @@
     "apollo-server-express": "^2.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "crypto-js": "^4.0.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
     "pg": "^8.5.1",
